--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ deploy_production:
     tags:
         - production
     script:
-        - export VERSION=$(sentry-cli releases propose-version)
+        - export VERSION=$(git describe HEAD)
         - sentry-cli releases new -p spnati $VERSION
         - bash ./prepare-online.sh
         - rsync -rltz --delete .public/ /opt/spnati
