--- a/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
+++ b/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
@@ -339,6 +339,12 @@
     <Compile Include="Controls\EditControls\VariableControls\BackgroundControl.Designer.cs">
       <DependentUpon>BackgroundControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\EditControls\VariableControls\HandQualityControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\EditControls\VariableControls\HandQualityControl.Designer.cs">
+      <DependentUpon>HandQualityControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\EditControls\VariableControls\PlayerStageControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -1344,6 +1350,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\EditControls\VariableControls\BackgroundControl.resx">
       <DependentUpon>BackgroundControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\EditControls\VariableControls\HandQualityControl.resx">
+      <DependentUpon>HandQualityControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\EditControls\VariableControls\PlayerStageControl.resx">
       <DependentUpon>PlayerStageControl.cs</DependentUpon>
