--- a/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
+++ b/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
@@ -327,6 +327,12 @@
     <Compile Include="Controls\EditControls\OneShotControl.Designer.cs">
       <DependentUpon>OneShotControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\EditControls\PoseMatchControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\EditControls\PoseMatchControl.Designer.cs">
+      <DependentUpon>PoseMatchControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\EditControls\VariableControls\BackgroundTagControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -1344,6 +1350,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\EditControls\OneShotControl.resx">
       <DependentUpon>OneShotControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\EditControls\PoseMatchControl.resx">
+      <DependentUpon>PoseMatchControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\EditControls\VariableControls\BackgroundTagControl.resx">
       <DependentUpon>BackgroundTagControl.cs</DependentUpon>
