--- a/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
+++ b/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
@@ -244,6 +244,7 @@
     <Compile Include="Analyzers\TagAnalyzer.cs" />
     <Compile Include="Analyzers\PoseDirectiveAnalyzers.cs" />
     <Compile Include="Analyzers\PoseCountAnalyzer.cs" />
+    <Compile Include="Categories\GeneralCategories.cs" />
     <Compile Include="Categories\RelativePosition.cs" />
     <Compile Include="Categories\SizeCategory.cs" />
     <Compile Include="Categories\Slot.cs" />
@@ -350,6 +351,12 @@
     </Compile>
     <Compile Include="Controls\EditControls\VariableControls\HandQualityControl.Designer.cs">
       <DependentUpon>HandQualityControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\EditControls\VariableControls\GlobalCategoryControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\EditControls\VariableControls\GlobalCategoryControl.Designer.cs">
+      <DependentUpon>GlobalCategoryControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\EditControls\VariableControls\PlayerStageControl.cs">
       <SubType>UserControl</SubType>
@@ -1362,6 +1369,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\EditControls\VariableControls\HandQualityControl.resx">
       <DependentUpon>HandQualityControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\EditControls\VariableControls\GlobalCategoryControl.resx">
+      <DependentUpon>GlobalCategoryControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\EditControls\VariableControls\PlayerStageControl.resx">
       <DependentUpon>PlayerStageControl.cs</DependentUpon>
