custom sorting folder view

--- a/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
+++ b/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
@@ -628,6 +628,7 @@
     <Compile Include="Controls\Dashboards\TaskTableRow.Designer.cs">
       <DependentUpon>TaskTableRow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\TreeViews\FolderView.cs" />
     <Compile Include="Controls\TreeViews\IDialogueTreeView.cs" />
     <Compile Include="Controls\TreeViews\CaseView.cs" />
     <Compile Include="Controls\TreeViews\StageView.cs" />
