--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,8 +22,7 @@ run_tests:
          # note: should probably do something like prepare-online.sh, but that would take a long time...
         - cd tests/
         - pipenv sync
-        # Note: for some reason, leaving the screen resolution at default causes Chrome to crash during tests.
-        - xvfb-run -a --server-args "-screen 0 1024x768x16" ./run-tests.sh
+        - ./run-tests.sh
     interruptible: true
 
 deploy_production:
