Tests: avoid creating redundant test jobs
Reconfigures tests to run only for the `master` branch
and for open merge requests.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ run_tests:
         - testing
     only:
         refs:
-            - branches
+            - master@spnati/spnati
             - merge_requests
         changes:
             - .gitlab-ci.yml
