--- a/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
+++ b/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
@@ -245,6 +245,7 @@
     <Compile Include="Analyzers\PoseDirectiveAnalyzers.cs" />
     <Compile Include="Analyzers\PoseCountAnalyzer.cs" />
     <Compile Include="Categories\GeneralCategories.cs" />
+    <Compile Include="Categories\DistanceCategory.cs" />
     <Compile Include="Categories\RelativePosition.cs" />
     <Compile Include="Categories\SizeCategory.cs" />
     <Compile Include="Categories\Slot.cs" />
@@ -471,6 +472,12 @@
     </Compile>
     <Compile Include="Controls\LiveEpilogueEditor.Designer.cs">
       <DependentUpon>LiveEpilogueEditor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\MarkerControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\MarkerControl.Designer.cs">
+      <DependentUpon>MarkerControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\MarkerOptions.cs">
       <SubType>UserControl</SubType>
@@ -900,6 +907,7 @@
     <Compile Include="DataStructures\VariableDatabase.cs" />
     <Compile Include="DesktopMessages.cs" />
     <Compile Include="DialogueDatabase.cs" />
+    <Compile Include="MarkerOperation.cs" />
     <Compile Include="DialogueLine.cs" />
     <Compile Include="EpilogueEditing\AnimationHelpers.cs" />
     <Compile Include="EpilogueEditing\DataStructures\LiveAnimatedObject.cs" />
@@ -1443,6 +1451,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\EpilogueEditor.resx">
       <DependentUpon>EpilogueEditor.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\FindReplace.resx">
       <DependentUpon>FindReplace.cs</DependentUpon>
@@ -1459,6 +1468,9 @@
     <EmbeddedResource Include="Controls\MarkerConditionField.resx">
       <DependentUpon>MarkerConditionField.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controls\MarkerControl.resx">
+      <DependentUpon>MarkerControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\MarkerGrid.resx">
       <DependentUpon>MarkerGrid.cs</DependentUpon>
     </EmbeddedResource>
@@ -1467,6 +1479,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\MarkerOptions.resx">
       <DependentUpon>MarkerOptions.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\PartTransparencySlider.resx">
       <DependentUpon>PartTransparencySlider.cs</DependentUpon>
