--- a/creator-docs/mkdocs.yml
+++ b/creator-docs/mkdocs.yml
@@ -1,4 +1,6 @@
 site_name: SPNATI Docs
+site_url: https://spnati.net/docs/
+use_directory_urls: false
 nav:
     - 'Getting Started':
         - 'Start Here!': 'start_guides/intro.md'
