Docs: fix CI spec and change index to be non-default

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ deploy_docs:
         refs:
             - master@spnati/spnati
         changes:
-            - creator_docs/**/*
+            - creator-docs/**/*
     script:
         - cd creator-docs
         - mkdocs build
