Docs: add CorkyTheCactus's guide to pose organization
I've more-or-less just copied the entire Markdown source from
Corky's original reddit post and shoved it into a `.md` file
(with permission, of course).

The only changes I made were:
 - Changing the section headers to use `###` so that the contents
   looks correct
 - Removing a reference to "the comments below" that I spotted
   at the last minute.

This guide can be found under Getting Started.

--- a/creator-docs/mkdocs.yml
+++ b/creator-docs/mkdocs.yml
@@ -4,6 +4,7 @@ use_directory_urls: false
 nav:
     - 'Getting Started':
         - 'Start Here!': 'start_guides/intro.md'
+        - 'Pose Organization': 'kkl/pose_organization.md'
     - 'References':
         - 'Dialogue Formatting': 'dialogue/formatting.md'
         - 'Conditions': 'dialogue/conditions.md'
