--- a/editor source/KisekaeImporter/KisekaeImporter.csproj
+++ b/editor source/KisekaeImporter/KisekaeImporter.csproj
@@ -70,6 +70,7 @@
     <Compile Include="DataStructures\Kisekae\SubCodes\KisekaeCensor.cs" />
     <Compile Include="DataStructures\Kisekae\SubCodes\KisekaeCrowd.cs" />
     <Compile Include="DataStructures\Kisekae\SubCodes\KisekaeGlobalImage.cs" />
+    <Compile Include="DataStructures\Kisekae\SubCodes\KisekaePantyhose.cs" />
     <Compile Include="DataStructures\Kisekae\SubCodes\KisekaeStage.cs" />
     <Compile Include="DataStructures\Kisekae\SubCodes\KisekaeFloor.cs" />
     <Compile Include="DataStructures\Kisekae\SubCodes\KisekaeBackground.cs" />
