--- a/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
+++ b/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
@@ -180,6 +180,12 @@
     <Compile Include="Activities\LineImporter.Designer.cs">
       <DependentUpon>LineImporter.cs</DependentUpon>
     </Compile>
+    <Compile Include="Activities\PoseMatrixEditor.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Activities\PoseMatrixEditor.Designer.cs">
+      <DependentUpon>PoseMatrixEditor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Activities\PoseUsageGraph.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -334,6 +340,12 @@
     </Compile>
     <Compile Include="Controls\EditControls\PoseMatchControl.Designer.cs">
       <DependentUpon>PoseMatchControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\EditControls\RectControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\EditControls\RectControl.Designer.cs">
+      <DependentUpon>RectControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\EditControls\VariableControls\BackgroundTagControl.cs">
       <SubType>UserControl</SubType>
@@ -889,6 +901,7 @@
     <Compile Include="DataStructures\Pose.cs" />
     <Compile Include="DataStructures\PoseDirective.cs" />
     <Compile Include="DataStructures\PoseMap.cs" />
+    <Compile Include="DataStructures\PoseMatrix.cs" />
     <Compile Include="DataStructures\Recipe.cs" />
     <Compile Include="DataStructures\Scene.cs" />
     <Compile Include="DataStructures\Screen.cs" />
@@ -907,6 +920,24 @@
     <Compile Include="DataStructures\VariableDatabase.cs" />
     <Compile Include="DesktopMessages.cs" />
     <Compile Include="DialogueDatabase.cs" />
+    <Compile Include="Forms\AddSheetForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AddSheetForm.Designer.cs">
+      <DependentUpon>AddSheetForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ImageLoader.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ImageLoader.Designer.cs">
+      <DependentUpon>ImageLoader.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ImportLineupForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ImportLineupForm.Designer.cs">
+      <DependentUpon>ImportLineupForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MarkerOperation.cs" />
     <Compile Include="DialogueLine.cs" />
     <Compile Include="EpilogueEditing\AnimationHelpers.cs" />
@@ -1272,6 +1303,9 @@
     <EmbeddedResource Include="Activities\Loader.resx">
       <DependentUpon>Loader.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Activities\PoseMatrixEditor.resx">
+      <DependentUpon>PoseMatrixEditor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Activities\PoseUsageGraph.resx">
       <DependentUpon>PoseUsageGraph.cs</DependentUpon>
     </EmbeddedResource>
@@ -1370,6 +1404,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\EditControls\PoseMatchControl.resx">
       <DependentUpon>PoseMatchControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\EditControls\RectControl.resx">
+      <DependentUpon>RectControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\EditControls\VariableControls\BackgroundTagControl.resx">
       <DependentUpon>BackgroundTagControl.cs</DependentUpon>
@@ -1574,6 +1611,9 @@
     <EmbeddedResource Include="EpilogueEditing\Timeline.resx">
       <DependentUpon>Timeline.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AddSheetForm.resx">
+      <DependentUpon>AddSheetForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\CallOutForm.resx">
       <DependentUpon>CallOutForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -1621,6 +1661,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="About.resx">
       <DependentUpon>About.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ImageLoader.resx">
+      <DependentUpon>ImageLoader.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ImportLineupForm.resx">
+      <DependentUpon>ImportLineupForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\KisekaeSetup.resx">
       <DependentUpon>KisekaeSetup.cs</DependentUpon>
@@ -1729,6 +1775,35 @@
     <None Include="Resources\Skins\The Inventory.skin">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Icons\FileMissing.png" />
+    <Content Include="Help\images\matrix1.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Help\images\matrix_lineup.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <None Include="Icons\CopyRect.png" />
+    <Content Include="Resources\Images\BaseCode.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\LineupAll.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\LineupClothing.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\LineupPose.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\PoseCode.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\StageCode.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="VersionHistory\v5.7.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="VersionHistory\v5.6.1.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
