remove OpponentStatus enum, add background reference

--- a/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
+++ b/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
@@ -503,6 +503,12 @@
     <Compile Include="Controls\PartTransparencySlider.Designer.cs">
       <DependentUpon>PartTransparencySlider.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Reference\BackgroundGuide.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Reference\BackgroundGuide.Designer.cs">
+      <DependentUpon>BackgroundGuide.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Reference\TagGuide.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -1520,6 +1526,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\PartTransparencySlider.resx">
       <DependentUpon>PartTransparencySlider.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Reference\BackgroundGuide.resx">
+      <DependentUpon>BackgroundGuide.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\Reference\TagGuide.resx">
       <DependentUpon>TagGuide.cs</DependentUpon>
