--- a/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
+++ b/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
@@ -926,6 +926,12 @@
     <Compile Include="DataStructures\VariableDatabase.cs" />
     <Compile Include="DesktopMessages.cs" />
     <Compile Include="DialogueDatabase.cs" />
+    <Compile Include="Forms\AddPoseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AddPoseForm.Designer.cs">
+      <DependentUpon>AddPoseForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\AddSheetForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1620,6 +1626,9 @@
     <EmbeddedResource Include="EpilogueEditing\Timeline.resx">
       <DependentUpon>Timeline.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AddPoseForm.resx">
+      <DependentUpon>AddPoseForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\AddSheetForm.resx">
       <DependentUpon>AddSheetForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -1792,6 +1801,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Icons\CopyRect.png" />
+    <None Include="Icons\CopyCode.png" />
+    <None Include="Icons\SortHorizontal.png" />
+    <None Include="Icons\InsertColumn.png" />
+    <None Include="Icons\Missing.png" />
     <Content Include="Resources\Images\BaseCode.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -1811,6 +1824,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="VersionHistory\v5.7.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="VersionHistory\v5.7.1.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="VersionHistory\v5.6.1.html">
