--- a/editor source/UnitTests/UnitTests.csproj
+++ b/editor source/UnitTests/UnitTests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="ImageMetadataTests.cs" />
     <Compile Include="IntellisenseTests.cs" />
     <Compile Include="MarkerTests.cs" />
+    <Compile Include="PoseMatrixTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResponseTests.cs" />
   </ItemGroup>
