various enhancements + fixes

--- a/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
+++ b/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
@@ -239,6 +239,7 @@
     <Compile Include="Analyzers\DataCriterion.cs" />
     <Compile Include="Analyzers\DialogueAnalyzers.cs" />
     <Compile Include="Analyzers\StatusAnalyzer.cs" />
+    <Compile Include="Analyzers\StyleAnalyzer.cs" />
     <Compile Include="Analyzers\VersionAnalyzer.cs" />
     <Compile Include="Analyzers\WardrobeAnalyzers.cs" />
     <Compile Include="Analyzers\MetadataAnalyzers.cs" />
@@ -340,6 +341,12 @@
     </Compile>
     <Compile Include="Controls\EditControls\PoseMatchControl.Designer.cs">
       <DependentUpon>PoseMatchControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\EditControls\PoseMetadataControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\EditControls\PoseMetadataControl.Designer.cs">
+      <DependentUpon>PoseMetadataControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\EditControls\RectControl.cs">
       <SubType>UserControl</SubType>
@@ -1417,6 +1424,9 @@
     <EmbeddedResource Include="Controls\EditControls\PoseMatchControl.resx">
       <DependentUpon>PoseMatchControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controls\EditControls\PoseMetadataControl.resx">
+      <DependentUpon>PoseMetadataControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\EditControls\RectControl.resx">
       <DependentUpon>RectControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -1805,6 +1815,8 @@
     <None Include="Icons\SortHorizontal.png" />
     <None Include="Icons\InsertColumn.png" />
     <None Include="Icons\Missing.png" />
+    <None Include="Icons\Edit.png" />
+    <None Include="Icons\PoseList.png" />
     <Content Include="Resources\Images\BaseCode.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -1821,6 +1833,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\Images\StageCode.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="VersionHistory\v5.8.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="VersionHistory\v5.7.3.html">
