Find replace codes, wrapping up 5.8

--- a/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
+++ b/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
@@ -269,6 +269,12 @@
     <Compile Include="Controls\CaseControl.Designer.cs">
       <DependentUpon>CaseControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\CodeReplaceBar.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\CodeReplaceBar.Designer.cs">
+      <DependentUpon>CodeReplaceBar.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\CriteriaSelect.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -1385,6 +1391,9 @@
     <EmbeddedResource Include="Controls\CharacterImageBox.resx">
       <DependentUpon>CharacterImageBox.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controls\CodeReplaceBar.resx">
+      <DependentUpon>CodeReplaceBar.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\CriteriaSelect.resx">
       <DependentUpon>CriteriaSelect.cs</DependentUpon>
     </EmbeddedResource>
@@ -1817,6 +1826,8 @@
     <None Include="Icons\Missing.png" />
     <None Include="Icons\Edit.png" />
     <None Include="Icons\PoseList.png" />
+    <None Include="Icons\Search.png" />
+    <None Include="Icons\Replace.png" />
     <Content Include="Resources\Images\BaseCode.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
