Added a first draft of Collectibles documentation
In an effort to help unify documentation, I will post a link directing anyone who finds the old "An Introduction to Collectables" Reddit post to come to this document instead. This draft uses a lot of the wording from that original post.

--- a/creator-docs/mkdocs.yml
+++ b/creator-docs/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
         - 'Variables': 'dialogue/variables.md'
         - 'Tagging': 'dialogue/tags.md'
         - 'Backgrounds': 'dialogue/backgrounds.md'
+        - 'Collectibles': 'extras/collectibles.md'
         - 'KKL Alpha Transparency': 'kkl/alpha_transparency.md'
         - 'KKL Remote Control Protocol': 'kkl/kkl_local_protocol.md'
     - 'Policy':
