--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,6 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.PNG filter=lfs diff=lfs merge=lfs -text
 *.JPG filter=lfs diff=lfs merge=lfs -text
+
+*.xml text
+*.txt text
