--- a/.gitattributes
+++ b/.gitattributes
@@ -5,7 +5,6 @@
 *.gif filter=lfs diff=lfs merge=lfs -text
 *.image filter=lfs diff=lfs merge=lfs -text
 *.psd filter=lfs diff=lfs merge=lfs -text
-*.png[[:space:]]*.jpg[[:space:]]*.jpeg[[:space:]]*.gif[[:space:]]*.image[[:space:]]*.xcf[[:space:]]*.psd filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.PNG filter=lfs diff=lfs merge=lfs -text
@@ -13,3 +12,4 @@
 
 *.xml text
 *.txt text
+*.js text
