reviving epilogue timeline system

--- a/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
+++ b/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Actions\MoveSpriteStartCommand.cs" />
     <Compile Include="Actions\PasteEventCommand.cs" />
     <Compile Include="Actions\PasteKeyframeCommand.cs" />
+    <Compile Include="Actions\SplitKeyframeCommand.cs" />
     <Compile Include="Actions\TimelineActions\ModifyWidgetLengthTimelineAction.cs" />
     <Compile Include="Actions\TimelineActions\MoveBreakTimelineAction.cs" />
     <Compile Include="Actions\TimelineActions\MoveWidgetTimelineAction.cs" />
@@ -939,6 +940,9 @@
     <Compile Include="DataStructures\VariableDatabase.cs" />
     <Compile Include="DesktopMessages.cs" />
     <Compile Include="DialogueDatabase.cs" />
+    <Compile Include="EpilogueEditing\DataStructures\LivePauser.cs" />
+    <Compile Include="EpilogueEditing\Interfaces\IFixedLength.cs" />
+    <Compile Include="EpilogueEditing\Widgets\PauseWidget.cs" />
     <Compile Include="Forms\AddPoseForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1533,6 +1537,9 @@
     <EmbeddedResource Include="Controls\KeyboardDataGridView.resx">
       <DependentUpon>KeyboardDataGridView.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controls\LiveEpilogueEditor.resx">
+      <DependentUpon>LiveEpilogueEditor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\MarkerConditionField.resx">
       <DependentUpon>MarkerConditionField.cs</DependentUpon>
     </EmbeddedResource>
@@ -1828,6 +1835,15 @@
     <None Include="Icons\PoseList.png" />
     <None Include="Icons\Search.png" />
     <None Include="Icons\Replace.png" />
+    <None Include="Icons\LinkToEnd.png" />
+    <None Include="Icons\LinkToEndFill.png" />
+    <None Include="Icons\KeyframeSplit.png" />
+    <None Include="Icons\AddEmitter.png" />
+    <None Include="Icons\AddSprite.png" />
+    <None Include="Icons\AddTextBox.png" />
+    <None Include="Icons\KeyTypeBegin.png" />
+    <None Include="Icons\KeyTypeNormal.png" />
+    <None Include="Icons\KeyTypeSplit.png" />
     <Content Include="Resources\Images\BaseCode.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
