--- a/editor source/UnitTests/UnitTests.csproj
+++ b/editor source/UnitTests/UnitTests.csproj
@@ -38,6 +38,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -61,6 +62,7 @@
     <Compile Include="GUIHelperTests.cs" />
     <Compile Include="ImageMetadataTests.cs" />
     <Compile Include="IntellisenseTests.cs" />
+    <Compile Include="SceneTests.cs" />
     <Compile Include="MarkerTests.cs" />
     <Compile Include="PoseMatrixTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
