mostly functional - rooting out odd bugs here and there

--- a/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
+++ b/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
@@ -92,7 +92,6 @@
     <Compile Include="Actions\PasteKeyframeCommand.cs" />
     <Compile Include="Actions\SplitKeyframeCommand.cs" />
     <Compile Include="Actions\TimelineActions\ModifyWidgetLengthTimelineAction.cs" />
-    <Compile Include="Actions\TimelineActions\MoveBreakTimelineAction.cs" />
     <Compile Include="Actions\TimelineActions\MoveWidgetTimelineAction.cs" />
     <Compile Include="Actions\TimelineActions\SelectEventTimelineAction.cs" />
     <Compile Include="Actions\TimelineActions\SelectKeyframeTimelineAction.cs" />
@@ -940,9 +939,8 @@
     <Compile Include="DataStructures\VariableDatabase.cs" />
     <Compile Include="DesktopMessages.cs" />
     <Compile Include="DialogueDatabase.cs" />
-    <Compile Include="EpilogueEditing\DataStructures\LivePauser.cs" />
+    <Compile Include="EpilogueEditing\DataStructures\LiveSceneSegment.cs" />
     <Compile Include="EpilogueEditing\Interfaces\IFixedLength.cs" />
-    <Compile Include="EpilogueEditing\Widgets\PauseWidget.cs" />
     <Compile Include="Forms\AddPoseForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -971,7 +969,6 @@
     <Compile Include="DialogueLine.cs" />
     <Compile Include="EpilogueEditing\AnimationHelpers.cs" />
     <Compile Include="EpilogueEditing\DataStructures\LiveAnimatedObject.cs" />
-    <Compile Include="EpilogueEditing\DataStructures\LiveBreak.cs" />
     <Compile Include="EpilogueEditing\DataStructures\LiveBubble.cs" />
     <Compile Include="EpilogueEditing\DataStructures\LiveBubbleKeyframe.cs" />
     <Compile Include="EpilogueEditing\DataStructures\LiveBurst.cs" />
@@ -1844,6 +1841,7 @@
     <None Include="Icons\KeyTypeBegin.png" />
     <None Include="Icons\KeyTypeNormal.png" />
     <None Include="Icons\KeyTypeSplit.png" />
+    <None Include="Icons\AddEvent.png" />
     <Content Include="Resources\Images\BaseCode.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
