--- a/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
+++ b/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
@@ -269,6 +269,9 @@
     <Compile Include="Controls\CaseControl.Designer.cs">
       <DependentUpon>CaseControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\CharacterFolderDialog.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Controls\CodeReplaceBar.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -329,6 +332,12 @@
     </Compile>
     <Compile Include="Controls\EditControls\AnimDurationControl.Designer.cs">
       <DependentUpon>AnimDurationControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\EditControls\FolderSelectControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\EditControls\FolderSelectControl.Designer.cs">
+      <DependentUpon>FolderSelectControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\EditControls\LayerDifferenceControl.cs">
       <SubType>UserControl</SubType>
@@ -1392,6 +1401,9 @@
     <EmbeddedResource Include="Controls\CharacterImageBox.resx">
       <DependentUpon>CharacterImageBox.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controls\CharacterFolderDialog.resx">
+      <DependentUpon>CharacterFolderDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\CodeReplaceBar.resx">
       <DependentUpon>CodeReplaceBar.cs</DependentUpon>
     </EmbeddedResource>
@@ -1424,6 +1436,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\DialogueTree.resx">
       <DependentUpon>DialogueTree.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\EditControls\FolderSelectControl.resx">
+      <DependentUpon>FolderSelectControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\EditControls\LayerDifferenceControl.resx">
       <DependentUpon>LayerDifferenceControl.cs</DependentUpon>
@@ -1860,7 +1875,7 @@
     <Content Include="Resources\Images\StageCode.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="VersionHistory\v5.10.html">
+    <Content Include="VersionHistory\v6.0b.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="VersionHistory\v5.9.html">
