--- a/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
+++ b/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Actions\TimelineActions\SelectEventTimelineAction.cs" />
     <Compile Include="Actions\TimelineActions\SelectKeyframeTimelineAction.cs" />
     <Compile Include="Actions\ToggleKeyframeTypeCommand.cs" />
+    <Compile Include="Actions\TransferPreviousPropertyCommand.cs" />
     <Compile Include="Activities\AdvancedMetadataEditor.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -1857,6 +1858,7 @@
     <None Include="Icons\KeyTypeNormal.png" />
     <None Include="Icons\KeyTypeSplit.png" />
     <None Include="Icons\AddEvent.png" />
+    <None Include="Icons\TransferKeyframe.png" />
     <Content Include="Resources\Images\BaseCode.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
