cross stage pose maker poses

--- a/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
+++ b/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
@@ -1859,6 +1859,7 @@
     <None Include="Icons\KeyTypeSplit.png" />
     <None Include="Icons\AddEvent.png" />
     <None Include="Icons\TransferKeyframe.png" />
+    <None Include="Icons\RangeChooser.png" />
     <Content Include="Resources\Images\BaseCode.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
