various small enhancements and bug fixes

--- a/editor source/Desktop/Desktop.csproj
+++ b/editor source/Desktop/Desktop.csproj
@@ -162,6 +162,12 @@
     <Compile Include="CommonControls\PropertyControls\RecordControl.Designer.cs">
       <DependentUpon>RecordControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="CommonControls\PropertyControls\RecordListControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CommonControls\PropertyControls\RecordListControl.Designer.cs">
+      <DependentUpon>RecordListControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="CommonControls\PropertyControls\RefreshableListBox.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -472,6 +478,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CommonControls\PropertyControls\RecordControl.resx">
       <DependentUpon>RecordControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CommonControls\PropertyControls\RecordListControl.resx">
+      <DependentUpon>RecordListControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CommonControls\PropertyControls\SliderControl.resx">
       <DependentUpon>SliderControl.cs</DependentUpon>
