Case templates + safe mode

--- a/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
+++ b/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
@@ -115,6 +115,12 @@
     <Compile Include="Activities\CaseDataSlicer.Designer.cs">
       <DependentUpon>CaseDataSlicer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Activities\CaseTemplateEditor.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Activities\CaseTemplateEditor.Designer.cs">
+      <DependentUpon>CaseTemplateEditor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Activities\CharacterConfiguration.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -687,6 +693,7 @@
     <Compile Include="DataStructures\BackgroundDatabase.cs" />
     <Compile Include="DataStructures\BindableTag.cs" />
     <Compile Include="DataStructures\BindableTagList.cs" />
+    <Compile Include="DataStructures\CaseDefinition.cs" />
     <Compile Include="DataStructures\CaseLabel.cs" />
     <Compile Include="DataStructures\CaseNote.cs" />
     <Compile Include="DataStructures\CharacterHistory.cs" />
@@ -1224,6 +1231,7 @@
     <Compile Include="IO\SpnatiXmlSerializer.cs" />
     <Compile Include="DataStructures\Listing.cs" />
     <Compile Include="IO\CharacterStyleSheetSerializer.cs" />
+    <Compile Include="Providers\CaseGroupProvider.cs" />
     <Compile Include="Providers\FilterTypeProvider.cs" />
     <Compile Include="Services\IImageCompressor.cs" />
     <Compile Include="Services\KisekaeOnlineConverter.cs" />
@@ -1293,6 +1301,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Activities\CaseDataSlicer.resx">
       <DependentUpon>CaseDataSlicer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Activities\CaseTemplateEditor.resx">
+      <DependentUpon>CaseTemplateEditor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Activities\CharacterConfiguration.resx">
       <DependentUpon>CharacterConfiguration.cs</DependentUpon>
@@ -1833,6 +1844,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Icons\FileMissing.png" />
+    <Content Include="Help\images\casetemplates_editor.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Help\images\matrix1.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -1860,6 +1874,9 @@
     <None Include="Icons\AddEvent.png" />
     <None Include="Icons\TransferKeyframe.png" />
     <None Include="Icons\RangeChooser.png" />
+    <Content Include="Help\casetemplates.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\Images\BaseCode.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -1878,7 +1895,7 @@
     <Content Include="Resources\Images\StageCode.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="VersionHistory\v6.0b.html">
+    <Content Include="VersionHistory\v6.0.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="VersionHistory\v5.9.html">
