--- a/editor source/UnitTests/UnitTests.csproj
+++ b/editor source/UnitTests/UnitTests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="AnalyzerTests.cs" />
     <Compile Include="BehaviorTests.cs" />
     <Compile Include="CaseConversions.cs" />
+    <Compile Include="CaseDefinitionTests.cs" />
     <Compile Include="ConfigTests.cs" />
     <Compile Include="DateTests.cs" />
     <Compile Include="ExpressionTests.cs" />
