--- a/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
+++ b/editor source/SPNATI Character Editor/SPNATI Character Editor.csproj
@@ -508,6 +508,12 @@
     <Compile Include="Controls\IntervalSlider.Designer.cs">
       <DependentUpon>IntervalSlider.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\LineImportControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\LineImportControl.Designer.cs">
+      <DependentUpon>LineImportControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\LiveEpilogueEditor.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -561,6 +567,18 @@
     </Compile>
     <Compile Include="Controls\RecordSelectBox.Designer.cs">
       <DependentUpon>RecordSelectBox.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\ScratchPadControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\ScratchPadControl.Designer.cs">
+      <DependentUpon>ScratchPadControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\ScratchPadImportControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\ScratchPadImportControl.Designer.cs">
+      <DependentUpon>ScratchPadImportControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\SlicerControls\IntervalSlicerControl.cs">
       <SubType>UserControl</SubType>
@@ -1561,6 +1579,9 @@
     <EmbeddedResource Include="Controls\KeyboardDataGridView.resx">
       <DependentUpon>KeyboardDataGridView.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controls\LineImportControl.resx">
+      <DependentUpon>LineImportControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\LiveEpilogueEditor.resx">
       <DependentUpon>LiveEpilogueEditor.cs</DependentUpon>
     </EmbeddedResource>
@@ -1594,6 +1615,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\RecordSelectBox.resx">
       <DependentUpon>RecordSelectBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\ScratchPadControl.resx">
+      <DependentUpon>ScratchPadControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\ScratchPadImportControl.resx">
+      <DependentUpon>ScratchPadImportControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\SlicerControls\IntervalSlicerControl.resx">
       <DependentUpon>IntervalSlicerControl.cs</DependentUpon>
